--- a/Views/Access/Login.cshtml
+++ b/Views/Access/Login.cshtml
@@ -2,28 +2,48 @@
     ViewData["Title"] = "Login";
 }
 
-<h1>@ViewData["Title"]</h1>
+@* <h1>@ViewData["Title"]</h1> *@
 
-<div>
-    <div class="row">
-    <form action="@Url.Content("~/Login")" method="post">
-        <div class="form-group">
-            <label>Usuario</label>
-            <input type="email" name="user" id="" placeholder="luisa@gmail.com">
+<div class="background">
+    <div class="container-fluid">
+        <div class="row justify-content-center m-3">
+            <div class="col-12 content-head">
+                <h1 class="align-center text-center display-2 fw-bolder">
+                    <strong>Iniciar session </strong>
+                </h1>
+            </div>
+
         </div>
 
-        <div class="form-group">
-            <label>Contraseña</label>
-            <input type="password" name="password" id="">
+        <div class="row justify-content-center">
+            <div class="col-lg-8 mx-auto mbr-form">
+                <form action="@Url.Content("~/Login")" method="post">
+
+                    <div class="row">
+                        <div class="col-md col-sm-12 mb-3">
+                            <input type="text" name="user" placeholder="Email" class="form-control form-group all">
+                        </div>
+
+                        <div class="col-12 mb-3">
+                            <input type="password" name="password" placeholder="Contraseña"
+                                class="form-control form-group all">
+                        </div>
+
+                        <div class="col-12 mb-3">
+                            <input type="password" name="confirPassword" placeholder="Confirmar contraseña"
+                                class="form-control form-group all">
+                        </div>
+
+                        <div class="col-lg-12 col-md-12 col-sm-12 align-center mbr-section-btn text-center">
+                            <button type="submit"
+                                class="btn btn-success display-7 w-50 rounded-pill p-3 all ">Ingresar</button>
+                        </div>
+
+                    </div>
+                </form>
+
+            </div>
         </div>
+    </div>
 
-        <div class="form-group">
-            <input type="button" value="entrar" class="btn btn-success">
-        </div>
-
-    </form>
-
-    
-</div>
-    
 </div>
