Feact:Se crea la vista de crear usuario y el controlador

--- a/Views/Access/Login.cshtml
+++ b/Views/Access/Login.cshtml
@@ -9,7 +9,7 @@
         <div class="row justify-content-center m-3">
             <div class="col-12 content-head">
                 <h1 class="align-center text-center display-2 fw-bolder">
-                    <strong>Iniciar session </strong>
+                    <strong>Iniciar secion </strong>
                 </h1>
             </div>
 
