--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                          <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Access" asp-action="Login">Login</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="User" asp-action="CreateUser">Crear usuario</a>
+                        </li>
                     </ul>
                 </div>
             </div>
