--- a/wwwroot/css/IndexLoan.css
+++ b/wwwroot/css/IndexLoan.css
@@ -1,3 +1,40 @@
 .spaceOne{
     text-align: center;
 }
+
+.buttonsOptions{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 5px;
+}
+.card-body{
+    font-weight: bold;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card{
+    width: calc(100% - 0px);
+}
+
+.card-body i{
+    text-align: center;
+    color: #198754;
+    font-size: 3rem;
+}
+
+@media (width > 706px){
+    .card{
+        width: calc(20% - 0px);
+        border-radius: 10%;
+    }
+    .buttonsOptions{
+        justify-content: space-between;
+    }
+
+    
+}
+
