--- a/Views/Loan/IndexLoan.cshtml
+++ b/Views/Loan/IndexLoan.cshtml
@@ -1,8 +1,12 @@
 @{
 }
 @model gestionBiblioteca.Models.LoanViewModel;
-
 <link rel="stylesheet" href="~/css/IndexLoan.css" asp-append-version="true" />
+
+@{
+     var searchBook = Model.Books.Where(b => b.Title.Contains("C#")).ToList();
+}
+
 @*Opciones de los botones: Crear, elimar,actualizar, Historial de prestamos *@
 <div class="buttonsOptions">
     <div class="card">
@@ -44,8 +48,15 @@
         <div class="mb-3">
             <input type="text" class="form-control" id="titleCreate" placeholder="Estado">
         </div>
+        <label for="selectBook">Libro</label>
         <select id="disabledSelect" class="form-select">
-            @foreach( var item in Model.Authors){
+            @foreach( var item in Model.Books){
+                <option>@item.Title</option>
+            }
+        </select>
+        <label for="selectClient">Cliente</label>
+        <select id="selectClient" class="form-select">
+            @foreach( var item in Model.Clients){
                 <option>@item.Name</option>
             }
         </select>
@@ -63,9 +74,12 @@
                 <th scope="col">Id prestamo</th>
                 <th scope="col">Fecha de prestamo</th>
                 <th scope="col">Fecha de devolucion</th>
+                <th scope="col">Libro prestado</th>
+                <th scope="col">Cliente asignado</th>
             </tr>
         </thead>
         <tbody>
+
             @foreach (var item in Model.Loans)
             {
                 <tr>
