--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,32 +13,6 @@
 </head>
 
 <body>
-<<<<<<< HEAD
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">gestionBiblioteca</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Access" asp-action="Login">Login</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="User" asp-action="CreateUser">Crear usuario</a>
-                        </li>
-                    </ul>
-                </div>
-=======
     <header class="d-flex justify-content-center mt-4 mb-4">
         <nav
             class="nav1 navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom mb-4 rounded-pill w-75 d-flex justify-content-between align-items-center p-2">
@@ -56,11 +30,14 @@
                     <li>
                         <a class="text-black" href="">Prestamo</a>
                     </li>
+
+                    <li>
+                        <a class="text-black" asp-controller="User" asp-action="CreateUser">Crear usuario</a>
+                    </li>
                 </ul>
             </div>
             <div class="p-2">
                 <a href="" class="btn btn-success text-white rounded-pill fs-2 me-5 p-4 w-100">Login</a>
->>>>>>> 5dd5fd77b536f23e2311b1ee9f98f1ece47329dd
             </div>
         </nav>
     </header>
