--- a/Views/User/CreateUser.cshtml
+++ b/Views/User/CreateUser.cshtml
@@ -1,3 +1,5 @@
+@model List<gestionBiblioteca.Models.Role> 
+
 @{
     ViewData["Title"] = "CreateUser";
 }
@@ -30,10 +32,12 @@
                         </div>
 
                         <div class="col-12 mb-3">
-                            <select class="form-select form-group all" aria-label="Default select example">
-                                <option selected>Selecciona una opcion</option>
-                                <option value="1">Administrador</option>
-                                <option value="2">Empleado</option>
+                            <select id="roleSelect" class="form-select form-group all" aria-label="Default select example">
+                                <option selected>Selecciona una opción</option>
+                                    @foreach (var role in Model)
+                                    {
+                                        <option value="@role.IdRol">@role.Name</option>
+                                    }
                             </select>
                         </div>
 
