--- a/Views/Access/Login.cshtml
+++ b/Views/Access/Login.cshtml
@@ -17,7 +17,7 @@
 
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form">
-                <form action="@Url.Content("~/Login")" method="post">
+                <form action="@Url.Content("~/Access")" method="post">
 
                     <div class="row">
                         <div class="col-md col-sm-12 mb-3">
