--- a/Views/Loan/IndexLoan.cshtml
+++ b/Views/Loan/IndexLoan.cshtml
@@ -40,51 +40,49 @@
 @* Espacio 1: Crear un prestamo *@
 
 <div class="spaceOne">
-    <strong>Crear</strong>
+    <strong class="title">Crear</strong>
     <form asp-action="CreateLoan">
         <div class="mb-3">
-            <input type="date" class="form-control" id="dateCreate" asp-for="NewLoan.DeliveryDate" placeholder="Fecha del prestamo">
+            <label for="dateCreate" class="label">Fecha del prestamo</label>
+            <input type="date" class="form-control" id="dateCreate" asp-for="NewLoan.DeliveryDate" placeholder="Fecha del prestamo" required>
         </div>
-        <label for="idBook">Libro</label>
-        <select id="idBook" class="form-select" asp-for="NewLoan.IdBook">
+        <label for="idBook" class="label" >Libro</label>
+        <select id="idBook" class="form-select" asp-for="NewLoan.IdBook" required>
             @foreach( var item in Model.Books){
                 <option value="@item.IdBook">@item.Title</option>
             }
         </select>
-        <label for="idClient">Cliente</label>
-        <select id="idClient" class="form-select" asp-for="NewLoan.IdClient">
+        <label for="idClient" class="label">Cliente</label>
+        <select id="idClient" class="form-select" asp-for="NewLoan.IdClient" required>
             @foreach( var item in Model.Clients){
                 <option value="@item.IdClient">@item.Name</option>
             }
         </select>
-        <button type="submit" class="btn btn-primary">Guardar</button>
+        <button type="submit" class="btn btn-success mt-4 fs-3">Guardar</button>
     </form>
 </div>
 
 
 @* Espacio 4: Historial de prestamos *@
 
-<div>
+<div class="spaceOne">
+    <strong class="title">Historial de prestamos</strong>
     <table class="table">
         <thead>
             <tr>
-                <th scope="col">Id prestamo</th>
-                <th scope="col">Fecha de prestamo</th>
-                <th scope="col">Fecha de devolucion</th>
-                <th scope="col">Libro prestado</th>
-                <th scope="col">Cliente asignado</th>
+                <th scope="col">Id</th>
+                <th scope="col">Nombre del libro</th>
+                <th scope="col">Cantidad de veces prestado</th>
             </tr>
         </thead>
         <tbody>
 
-            @foreach (var item in Model.Loans)
+            @foreach (var item in Model.Records)
             {
                 <tr>
-                    <td>@item.IdLoan</td>
-                    <td>@item.DeliveryDate.ToString()</td>
-                    <td>@item.ReturnDate.ToString()</td>
-                    <td>@item.IdBookNavigation.Title</td>
-                    <td>@item.IdClientNavigation.Name</td>
+                    <td>@item.IdRecord</td>
+                    <td>@item.IdLoanNavigation.IdBookNavigation.Title</td>
+                    <td>@item.Quantity</td>  
                 </tr>
             }
         </tbody>
