--- a/wwwroot/css/IndexLoan.css
+++ b/wwwroot/css/IndexLoan.css
@@ -1,6 +1,9 @@
 .spaceOne{
     text-align: center;
 }
+.title{
+    font-size: 100px;
+}
 
 .buttonsOptions{
     display: flex;
@@ -24,6 +27,10 @@
     text-align: center;
     color: #198754;
     font-size: 3rem;
+}
+
+.label{
+    font-size: 2rem;
 }
 
 @media (width > 706px){
