Se crea la vista Create del modelo Book con su respectivo controlador

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                         <a class="text-black" href="">library</a>
                     </li>
                     <li>
-                        <a class="text-black" href="">Libro</a>
+                        <a class="text-black" asp-controller = "Book" asp-action = "Index">Libro</a>
                     </li>
                     <li>
                         <a class="text-black" href="">Prestamo</a>
