--- a/Views/Loan/IndexLoan.cshtml
+++ b/Views/Loan/IndexLoan.cshtml
@@ -1,13 +1,11 @@
-@{
-}
+
+@* Se importa el modelo que se utilizara apartir del controlador LoanController *@
 @model gestionBiblioteca.Models.LoanViewModel;
 <link rel="stylesheet" href="~/css/IndexLoan.css" asp-append-version="true" />
 
-@{
-   
-}
 
 @*Opciones de los botones: Crear, elimar,actualizar, Historial de prestamos *@
+
 <div class="buttonsOptions">
     <div class="card">
         <div class="card-body d-flex flex-column align-items-center">
@@ -42,10 +40,7 @@
 <div class="spaceOne">
     <strong class="title">Crear</strong>
     <form asp-action="CreateLoan">
-        <div class="mb-3">
-            <label for="dateCreate" class="label">Fecha del prestamo</label>
-            <input type="date" class="form-control" id="dateCreate" asp-for="NewLoan.DeliveryDate" placeholder="Fecha del prestamo" required>
-        </div>
+
         <label for="idBook" class="label" >Libro</label>
         <select id="idBook" class="form-select" asp-for="NewLoan.IdBook" required>
             @foreach( var item in Model.Books){
