--- a/wwwroot/css/IndexLoan.css
+++ b/wwwroot/css/IndexLoan.css
@@ -1,3 +1,5 @@
+/* Clase css para la vista IndexLoan.cshtml */
+
 .spaceOne{
     text-align: center;
 }
@@ -5,6 +7,7 @@
     font-size: 100px;
 }
 
+/* Estilos para los botones iniciales de la vista */
 .buttonsOptions{
     display: flex;
     justify-content: center;
@@ -33,6 +36,7 @@
     font-size: 2rem;
 }
 
+/* Responsive cuando la pantalla sea mas grande para los botones principales de la vista */
 @media (width > 706px){
     .card{
         width: calc(20% - 0px);
