--- a/Views/Loan/IndexLoan.cshtml
+++ b/Views/Loan/IndexLoan.cshtml
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="~/css/IndexLoan.css" asp-append-version="true" />
 
 @{
-     var searchBook = Model.Books.Where(b => b.Title.Contains("C#")).ToList();
+    var searchBook = Model.Books.Where(b => b.Title.Contains("C#")).ToList();
 }
 
 @*Opciones de los botones: Crear, elimar,actualizar, Historial de prestamos *@
@@ -50,19 +50,28 @@
         </div>
         <label for="selectBook">Libro</label>
         <select id="disabledSelect" class="form-select">
-            @foreach( var item in Model.Books){
+            @foreach (var item in Model.Books)
+            {
                 <option>@item.Title</option>
             }
         </select>
         <label for="selectClient">Cliente</label>
         <select id="selectClient" class="form-select">
-            @foreach( var item in Model.Clients){
+            @foreach (var item in Model.Clients)
+            {
                 <option>@item.Name</option>
             }
         </select>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-success">Submit</button>
     </form>
 </div>
+
+@* Espacio 2: Devolver un prestamo *@
+
+
+
+@* Espacio 3: Actualizar un prestamo *@
+
 
 
 @* Espacio 4: Historial de prestamos *@
