Feat: Se fusiona con la rama A5 del github creado por Jonathan Escobar con la rama A5 local de Nicolas Martines

--- a/wwwroot/css/IndexLoan.css
+++ b/wwwroot/css/IndexLoan.css
@@ -2,9 +2,11 @@
 
 .spaceOne{
     text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 .title{
-    font-size: 100px;
+    font-size: 50px;
 }
 
 /* Estilos para los botones iniciales de la vista */
