--- a/Views/Loan/IndexLoan.cshtml
+++ b/Views/Loan/IndexLoan.cshtml
@@ -40,8 +40,8 @@
 
 @* Espacio 1: Crear un prestamo *@
 
-<div class="spaceOne">
-    <strong class="title">Crear</strong>
+<div class="spaceOne mt-5">
+    <strong class="title">Crear Prestamo</strong>
     <form asp-action="CreateLoan">
 
         <label for="idBook" class="label" >Libro</label>
@@ -58,104 +58,109 @@
         </select>
         <button type="submit" class="btn btn-success mt-4 fs-3">Guardar</button>
     </form>
-</div>
+
 
 @* Espacio 2: Devolver un prestamo *@
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>Prestamo ID</th>
-            <th>Libro titulo</th>
-            <th>Nombre Cliente</th>
-            <th>Fecha de Entrega</th>
-            <th>Fecha de Devolucion</th>
-            <th>Acción</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var loan in Model.Loans)
-        {
-            var book = Model.Books.FirstOrDefault(b => b.IdBook == loan.IdBook);
-            var client = Model.Clients.FirstOrDefault(c => c.IdClient == loan.IdClient);
-
+<div class="spaceOne mt-5">
+    <strong class="title">Devolver prestamo</strong>
+    <table class="table">
+        <thead>
             <tr>
-                <td>@loan.IdLoan</td>
-                <td>@(book?.Title ?? "Unknown")</td>
-                <td>@(client?.Name ?? "Unknown")</td>
-                <td>@loan.DeliveryDate</td>
-                <td>@loan.ReturnDate</td>
-                <td>
-                    @if (loan.ReturnDate == null)
-                    {
-                        <form asp-action="ReturnLoan" asp-route-id="@loan.IdLoan" method="post">
-                            <button type="submit" class="btn btn-success">Devolver Préstamo</button>
-                        </form>
-                    }
-                    else
-                    {
-                        <span>Préstamo Devuelto</span>
-                    }
-                </td>
+                <th>Prestamo ID</th>
+                <th>Libro titulo</th>
+                <th>Nombre Cliente</th>
+                <th>Fecha de Entrega</th>
+                <th>Fecha de Devolucion</th>
+                <th>Acción</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var loan in Model.Loans)
+            {
+                var book = Model.Books.FirstOrDefault(b => b.IdBook == loan.IdBook);
+                var client = Model.Clients.FirstOrDefault(c => c.IdClient == loan.IdClient);
 
+                <tr>
+                    <td>@loan.IdLoan</td>
+                    <td>@(book?.Title ?? "Unknown")</td>
+                    <td>@(client?.Name ?? "Unknown")</td>
+                    <td>@loan.DeliveryDate</td>
+                    <td>@loan.ReturnDate</td>
+                    <td>
+                        @if (loan.ReturnDate == null)
+                        {
+                            <form asp-action="ReturnLoan" asp-route-id="@loan.IdLoan" method="post">
+                                <button type="submit" class="btn btn-success">Devolver Préstamo</button>
+                            </form>
+                        }
+                        else
+                        {
+                            <span>Préstamo Devuelto</span>
+                        }
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
 
 @* Espacio 3: Actualizar un prestamo *@
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>Loan ID</th>
-            <th>Book Title</th>
-            <th>Client Name</th>
-            <th>Delivery Date</th>
-            <th>Return Date</th>
-            <th>Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var loan in Model.Loans)
-        {
-            var book = Model.Books.FirstOrDefault(b => b.IdBook == loan.IdBook);
-            var client = Model.Clients.FirstOrDefault(c => c.IdClient == loan.IdClient);
-
+<div class="spaceOne mt-5">
+    <strong class="title">Actualizar prestamo</strong>
+    <table class="table">
+        <thead>
             <tr>
-                <form asp-action="EditLoan" method="post">
-                    <td>@loan.IdLoan</td>
-                    <td>
-                        <input required type="text" class="form-control" name="BookTitle" value="@book.Title" />
-                    </td>
-                    <td>
-                        <select class="form-control" name="Id_Client">
-                            @foreach (var c in Model.Clients)
-                            {
-                                <option value="@c.IdClient">@c.Name</option>
-                            }
-                        </select>
-                    </td>
-                    <td>
-                        <input type="date" class="form-control" name="Delivery_Date" value="@loan.DeliveryDate.ToString("yyyy-MM-dd")" />
-                    </td>
-                    <td>
-                        <input type="date" class="form-control" name="Return_Date" value="@loan.ReturnDate?.ToString("yyyy-MM-dd")" />
-                    </td>
-                    <td>
-                        <input type="hidden" name="Id" value="@loan.IdLoan" />
-                        <input type="hidden" name="Id_Book" value="@book.IdBook" />
-                        <button type="submit" class="btn btn-success">Guardar</button>
-                    </td>
-                </form>
+                <th>Loan ID</th>
+                <th>Book Title</th>
+                <th>Client Name</th>
+                <th>Delivery Date</th>
+                <th>Return Date</th>
+                <th>Actions</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var loan in Model.Loans)
+            {
+                var book = Model.Books.FirstOrDefault(b => b.IdBook == loan.IdBook);
+                var client = Model.Clients.FirstOrDefault(c => c.IdClient == loan.IdClient);
+
+                <tr>
+                    <form asp-action="EditLoan" method="post">
+                        <td>@loan.IdLoan</td>
+                        <td>
+                            <input required type="text" class="form-control" name="BookTitle" value="@book.Title" />
+                        </td>
+                        <td>
+                            <select class="form-control" name="Id_Client">
+                                @foreach (var c in Model.Clients)
+                                {
+                                    <option value="@c.IdClient">@c.Name</option>
+                                }
+                            </select>
+                        </td>
+                        <td>
+                            <input type="date" class="form-control" name="Delivery_Date" value="@loan.DeliveryDate.ToString("yyyy-MM-dd")" />
+                        </td>
+                        <td>
+                            <input type="date" class="form-control" name="Return_Date" value="@loan.ReturnDate?.ToString("yyyy-MM-dd")" />
+                        </td>
+                        <td>
+                            <input type="hidden" name="Id" value="@loan.IdLoan" />
+                            <input type="hidden" name="Id_Book" value="@book.IdBook" />
+                            <button type="submit" class="btn btn-success">Guardar</button>
+                        </td>
+                    </form>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
 
 @* Espacio 4: Historial de prestamos *@
 
-<div class="spaceOne">
+<div class="spaceOne mt-5">
     <strong class="title">Historial de prestamos</strong>
     <table class="table">
         <thead>
