--- a/Views/Book/Create.cshtml
+++ b/Views/Book/Create.cshtml
@@ -9,35 +9,48 @@
 
 <div class="row">
     <div class="col-sm-8 offset-sm-2">
-        <h2>Crear Libro</h2>
-        <form asp-controller="Book" asp-action="Create" method="post">
-            <div class="mb-3">
+        <h2 class="text-center fs-1 fw-bold">Crear Libro</h2>
+        <form asp-controller="Book" asp-action="Create" method="post" class="mt-4 d-flex flex-column gap-3">
+            <div class="d-flex flex-column gap-2">
                 <label> Id Libro</label>
-                <input type="text" asp-for="IdBook" class="form-control" readonly value= "@adjustLastBook">
+                <input type="text" asp-for="IdBook" class="form-control" readonly value="@adjustLastBook">
+            </div>
+            <div class="mt-3 d-flex flex-column gap-2">
                 <label>Titulo Libro</label>
                 <input type="text" asp-for="Title" class="form-control">
             </div>
-            <select asp-for="Status" class="form-select" aria-label="Default select example">
-                <option selected>Seleccione La Disponibilidad</option>
-                <option value= "true">Disponible</option>
-                <option value= "false">No Disponible</option>
-            </select>
-            <select class="form-select mt-3" asp-for="IdAuthor" aria-label="Default select example">
-                <option selected>Seleccione El Autor</option>
-                @foreach (var author in authors)
-                {
-                    <option value= "@author.IdAuthor">@author.Name</option>
-                }
-            </select>
-            <select class="form-select mt-3" asp-for="IdCategory" aria-label="Default select example">
-                <option selected>Seleccione La Categoria</option>
-                @foreach (var category in categories)
-                {
-                    <option value="@category.IdCategory">@category.TypeCategory</option>
-                }
-            </select>
-            <button type="submit" class="btn btn-success mt-3">Guardar</button>
-            <a asp-controller="Book" asp-action="Index" class="btn btn-danger mt-3">Volver</a>
+            <div class="mt-3 d-flex flex-column gap-2">
+                <label>Disponibilidad</label>
+                <select asp-for="Status" class="form-select" aria-label="Default select example">
+                    <option selected>Seleccione La Disponibilidad</option>
+                    <option value="true">Disponible</option>
+                    <option value="false">No Disponible</option>
+                </select>
+            </div>
+            <div class="mt-3 d-flex flex-column gap-2">
+                <label>Autor</label>
+                <select class="form-select" asp-for="IdAuthor" aria-label="Default select example">
+                    <option selected>Seleccione El Autor</option>
+                    @foreach (var author in authors)
+                    {
+                        <option value="@author.IdAuthor">@author.Name</option>
+                    }
+                </select>
+            </div>
+            <div class="mt-3 d-flex flex-column gap-2">
+                <option selected>Categoria</option>
+                <select class="form-select" asp-for="IdCategory" aria-label="Default select example">
+                    <option selected>Seleccione La Categoria</option>
+                    @foreach (var category in categories)
+                    {
+                        <option value="@category.IdCategory">@category.TypeCategory</option>
+                    }
+                </select>
+            </div>
+            <div class="mt-3 text-center">
+                <button type="submit" class="btn btn-success w-25 me-3">Guardar</button>
+                <a asp-controller="Book" asp-action="Index" class="btn btn-danger w-25">Volver</a>
+            </div>
         </form>
     </div>
 </div>
