--- a/Views/Book/Create.cshtml
+++ b/Views/Book/Create.cshtml
@@ -13,7 +13,7 @@
         <form asp-controller="Book" asp-action="Create" method="post" class="mt-4 d-flex flex-column gap-3">
             <div class="d-flex flex-column gap-2">
                 <label> Id Libro</label>
-                <input type="text" asp-for="IdBook" class="form-control" readonly value="@adjustLastBook">
+                <input type="hidden" asp-for="IdBook" class="form-control" readonly value="@adjustLastBook">
             </div>
             <div class="mt-3 d-flex flex-column gap-2">
                 <label>Titulo Libro</label>
