--- a/Views/Book/Index.cshtml
+++ b/Views/Book/Index.cshtml
@@ -1,4 +1,5 @@
 @model List<gestionBiblioteca.Models.Book>
+<link rel="stylesheet" href="~/css/IndexLoan.css" asp-append-version="true" />
 @{
     var authors = ViewBag.AuthorList;
     var categories = ViewBag.CategoryList;
@@ -7,9 +8,16 @@
 
 <div>
     <div class="row">
-        <a class = "btn btn-success" asp-controller = "Book" asp-action = "Create">Crear Libro</a>
+        <div class="buttonsOptions d-flex justify-content-center">
+            <a class="card text-decoration-none text-black" asp-controller="Book" asp-action="Create">
+                <div class="card-body d-flex flex-column align-items-center">
+                    <i class="bi bi-arrow-down-circle-fill"></i>
+                    <p>Crear Libro</p>
+                </div>
+            </a>
+        </div>
         <div class="">
-            <h2 class="text-center fs-1 fw-bold">Lista Libros</h2>
+            <h2 class="fs-1 fw-bold mt-5">Lista Libros</h2>
             <table class="table table-striped-columns mt-4 table-hover">
                 <thead>
                     <th>Id</th>
